--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -7,29 +7,37 @@
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
+		<h:messages/>
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 
 				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" />
+				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" 
+							requiredMessage="Titulo obrigatório!" validatorMessage="Título nã pode ser superior a 40 caracteres">
+					<f:validateLength maximum="40"/>
+				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" />
 
 				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
+				<h:inputText id="preco" value="#{livroBean.livro.preco}" required="true" 
+							requiredMessage="Valor nao pode ser branco" validatorMessage="Valor entre R$1,00 e R$1000,00">
+					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+				</h:inputText>
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento}" />
+				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"/>
+				</h:inputText>
 
 			</h:panelGrid>
 		</fieldset>
 		
 		<fieldset>
 			<legend>Dados do Autor</legend>
-			<h:outputLabel value="Selecione Autor: " for="autor" />
+			<h:outputLabel value="Selecione Autor:" for="autor" />
 			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
 				<f:selectItems value="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}"
 				itemValue="#{autor.id}" />
@@ -65,8 +73,10 @@
 			</h:column>
 			
 			<h:column>
-				<f:facet name="header">Data</f:facet>
-				<h:outputText value="#{livro.dataLancamento}"/>
+				<f:facet name="header">Data de Lançamento</f:facet>
+				<h:outputText value="#{livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+				</h:outputText>
 			</h:column>
 		</h:dataTable>
 	</fieldset>
