--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,11 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
+	
+	<h:head/>
 
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
-		<h:messages/>
+		<h:messages id="mensagens"/>
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
@@ -16,15 +18,19 @@
 				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" 
 							requiredMessage="Titulo obrigatório!" validatorMessage="Título nã pode ser superior a 40 caracteres">
 					<f:validateLength maximum="40"/>
+					<f:ajax event="blur" render="mensagens"/>
 				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}">
+					<f:ajax event="blur" render="mensagens"/>
+				</h:inputText>
 
 				<h:outputLabel value="Preço:" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}" required="true" 
 							requiredMessage="Valor nao pode ser branco" validatorMessage="Valor entre R$1,00 e R$1000,00">
 					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+					<f:ajax event="keyup" render="mensagens"/>
 				</h:inputText>
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
@@ -42,16 +48,20 @@
 				<f:selectItems value="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}"
 				itemValue="#{autor.id}" />
 			</h:selectOneMenu>
-				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
+				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
+					<f:ajax execute="autor" render="tabelaAutores"/>
+				</h:commandButton>
 				
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
 					<h:column>
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
 				</h:dataTable>
 		</fieldset>
 
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			<f:ajax execute="@form" render="@form :tabelaLivros" />
+		</h:commandButton>
 	</h:form>
 	
 	<fieldset>
