- criando o phaselistener para monitorar as fases - criando classes para retornar strings com parametros de redirecionamento -redirect para o lado do cliente e forword para o lado do servidor

--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -50,6 +50,7 @@
 			</h:selectOneMenu>
 				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
 					<f:ajax execute="autor" render="tabelaAutores"/>
+					<h:commandLink action="#{livroBean.formAutor}" value="Cadastrar novo autor" immediate="true" />
 				</h:commandButton>
 				
 				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
