--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 	<ui:composition template="_template.xhtml">
 	<ui:define name="titulo">Novo Autor</ui:define>
@@ -16,7 +17,21 @@
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
 			</fieldset>
+			<fieldset>
+				<legend>Autores Cadastrados</legend>
+				<h:dataTable value="#{autorBean.autores}" id="tabelaAutores" var="autor">
+					<h:column>
+						<f:facet name="header">Autor</f:facet>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Remover</f:facet>
+						<h:commandLink value="Remover" action="#{autorBean.remover(autor)}"/>
+					</h:column>
+				</h:dataTable>
+			</fieldset>
 		</h:form>
+		
 	</ui:define>
 	</ui:composition>
 </html>
